feat: V7 inspection platform Phase 1 - concept cleanup, scoring cascade, UI modernization
Phase 1.1: Rename ScoringProfile.templateId → sectionId (unified naming)
Phase 1.2: Sync ScoreDimension weight from TemplateSection.weight (single source of truth)
Phase 1.3: Remove redundant TemplateSection.gradeBands field
Phase 1.4: Clean up stale InspTemplate/TemplateModuleRef references
Phase 1.5: Score cascade recalculation (detail → submission → task → project)
Phase 1.6: Redesign inspection config list (card grid + stats bar + search)
Phase 1.7: Redesign project wizard (3-step: select template → configure scope → confirm)

Additional changes from earlier in session:
- Template editor: 3-column → 2-column layout with inline scoring
- SectionTree: shows both sections and field items
- DimensionTable: read-only (weights synced from sections)
- GradeBandEditor/CalcRuleChain: compact design
- ItemEditor: inline scoring config (no modal)
- PlaceCategory → PlaceType unified (ConfigurableType)
- Fix API paths: /org-types, /place-types, /place-categories table created
- Fix string/number ID comparison issues throughout

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>